--- a/docs/locale/en/LC_MESSAGES/sourcecode.po
+++ b/docs/locale/en/LC_MESSAGES/sourcecode.po
@@ -22,11 +22,11 @@ msgstr ""
 
 #: ../../sourcecode.md:1
 msgid "Code source et mises à jour"
-msgstr ""
+msgstr "Updates and source code"
 
 #: ../../sourcecode.md:3
 msgid "Code source"
-msgstr ""
+msgstr "Source code"
 
 #: ../../sourcecode.md:4
 msgid ""
