update translation template

--- a/docs/locale/en/LC_MESSAGES/manuel_utilisateur.po
+++ b/docs/locale/en/LC_MESSAGES/manuel_utilisateur.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenStreetTouch 0.2.3\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-04-01 21:07+0000\n"
+"POT-Creation-Date: 2025-04-01 21:45+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: en\n"
@@ -199,8 +199,8 @@ msgid ""
 "![Capture d'écran de la page d'accueil](IMG/home.jpg) *Capture d'écran de"
 " la page d'accueil*"
 msgstr ""
-"![Home page screenshot with software version, partners logo and main menu](IMG/home.jpg) "
-"*Home screenshot*"
+"![Home page screenshot with software version, partners logo and main "
+"menu](IMG/home.jpg) *Home screenshot*"
 
 #: ../../manuel_utilisateur.md:48
 msgid "Capture d'écran de la page d'accueil"
@@ -223,8 +223,8 @@ msgid ""
 "![Capture d'écran de l'onglet Transport](IMG/transport.png) *Utilisation "
 "e l'onglet Transport avec le métro Parisien*"
 msgstr ""
-"![Transport tab screenshot](IMG/transport_en.png) *Using the"
-" Transport tab with the Paris Metro*"
+"![Transport tab screenshot](IMG/transport_en.png) *Using the Transport "
+"tab with the Paris Metro*"
 
 #: ../../manuel_utilisateur.md:57
 msgid "Capture d'écran de l'onglet Transport"
@@ -348,8 +348,8 @@ msgid ""
 "**Dessiner les stations :** cocher cette option pour que les stations "
 "soient visibles sur la carte"
 msgstr ""
-"**Draw stations :** check this option to make the stations displayed on the"
-" map"
+"**Draw stations :** check this option to make the stations displayed on "
+"the map"
 
 #: ../../manuel_utilisateur.md:103
 msgid ""
@@ -414,7 +414,8 @@ msgid ""
 "dessiner la/les lignes de transports*"
 msgstr ""
 "![Rendering in the right panel when the option \"draw stations\" is\" not"
-" checked](IMG/dessiner_ligne_transport_en.png) *Button draw transport line*"
+" checked](IMG/dessiner_ligne_transport_en.png) *Button draw transport "
+"line*"
 
 #: ../../manuel_utilisateur.md:117 ../../manuel_utilisateur.md:131
 msgid ""
@@ -445,8 +446,8 @@ msgid ""
 "\"dessiner les stations\" et \"polygone\"*"
 msgstr ""
 "![Rendering in the right panel with option \"draw stations and polygons\""
-" to draw transport lines](IMG/dessiner_les_stations_en.png) *Rendering in "
-"the right panel of the chosen transport lines, with the option \"draw "
+" to draw transport lines](IMG/dessiner_les_stations_en.png) *Rendering in"
+" the right panel of the chosen transport lines, with the option \"draw "
 "stations\" and \"polygons\"* "
 
 #: ../../manuel_utilisateur.md:127
@@ -465,8 +466,8 @@ msgid ""
 "non cochée*"
 msgstr ""
 "![Rendering in the right panel when the option \"draw stations\" is not "
-"checked](IMG/polygone_segments_no_station_en.png) *Rendering in the right "
-"panel when the option \"draw stations\" is not checked*"
+"checked](IMG/polygone_segments_no_station_en.png) *Rendering in the right"
+" panel when the option \"draw stations\" is not checked*"
 
 #: ../../manuel_utilisateur.md:135
 msgid ""
@@ -642,8 +643,9 @@ msgid "Carte"
 msgstr "Map"
 
 #: ../../manuel_utilisateur.md:182
-msgid "**Plan de ville**"
-msgstr "**City map**"
+#, fuzzy
+msgid "**Extraction de carte**"
+msgstr "Draw extracted map"
 
 #: ../../manuel_utilisateur.md:184
 msgid ""
@@ -660,10 +662,7 @@ msgstr ""
 msgid ""
 "![Vue de l'interface de l'onglet carte](IMG/map.png) *Vue de l'interface "
 "de l'onglet carte*"
-msgstr ""
-"![Map tab screenshot](IMG/map_en.png) "
-"*Map tab screenshot* "
-
+msgstr "![Map tab screenshot](IMG/map_en.png) *Map tab screenshot* "
 
 #: ../../manuel_utilisateur.md:186
 msgid "Vue de l'interface de l'onglet carte"
@@ -745,8 +744,8 @@ msgid ""
 "![Rendu en incluant les immeubles )](IMG/inclure_immeubles.png) *Exemple "
 "de rendu de carte en incluant les immeubles*"
 msgstr ""
-"![Render including buildings](IMG/inclure_immeubles_en.png) *Example of map "
-"rendering including buildings*"
+"![Render including buildings](IMG/inclure_immeubles_en.png) *Example of "
+"map rendering including buildings*"
 
 #: ../../manuel_utilisateur.md:210
 msgid "Rendu en incluant les immeubles )"
@@ -816,8 +815,8 @@ msgid ""
 "zone de la carte*"
 msgstr ""
 "![View of the button in the interface to extract the area of the map "
-")](IMG/extraction_de_la_zone_de_la_carte_en.png) *Button to extract the area"
-" of the map*"
+")](IMG/extraction_de_la_zone_de_la_carte_en.png) *Button to extract the "
+"area of the map*"
 
 #: ../../manuel_utilisateur.md:232
 msgid "Vue du bouton dabns l'interface pour extraire la zone de la carte )"
@@ -834,8 +833,8 @@ msgid ""
 "souhaité : svg ou png*"
 msgstr ""
 "![Save image in the desired format : svg or png "
-")](IMG/enregistrer_image_svg_carte_en.png) *Save image in the desired format"
-" : svg or png*"
+")](IMG/enregistrer_image_svg_carte_en.png) *Save image in the desired "
+"format : svg or png*"
 
 #: ../../manuel_utilisateur.md:239
 msgid "Enregistrer image sous le format voulu : svg ou png )"
@@ -879,8 +878,9 @@ msgid ""
 ")](IMG/Langue_application.png) *Choix de la langue dans le menu "
 "Paramètres*"
 msgstr ""
-"![Language selection in the Parameters tab )](IMG/Langue_application_en.png)"
-" *Language selection in the Parameters tab*"
+"![Language selection in the Parameters tab "
+")](IMG/Langue_application_en.png) *Language selection in the Parameters "
+"tab*"
 
 #: ../../manuel_utilisateur.md:255
 msgid "Choix de la langue dans le menu Paramètres )"
@@ -896,9 +896,8 @@ msgid ""
 " que le focus soit positionné sur les éléments les plus utilisés lors de "
 "la navigation dans l'application."
 msgstr ""
-"**Set focus on navigate :** Check this option to set"
-" the focus on the most used elements when navigating in the application."
-" "
+"**Set focus on navigate :** Check this option to set the focus on the "
+"most used elements when navigating in the application. "
 
 #: ../../manuel_utilisateur.md:262
 msgid ""
@@ -909,11 +908,12 @@ msgid ""
 "cette option pour activer ou désactiver les raccourcis clavier dans le "
 "menu principal."
 msgstr ""
-"**Enable Access key in main menu :** Keyboard shortcuts are very useful to allow a fast navigation."
-" However they are difficult to translate in some languages and are sometimes incompatible with screen readers."
-" You can use this option to enable or disable keyboard shortcuts in the main menu."
-" "
-    
+"**Enable Access key in main menu :** Keyboard shortcuts are very useful "
+"to allow a fast navigation. However they are difficult to translate in "
+"some languages and are sometimes incompatible with screen readers. You "
+"can use this option to enable or disable keyboard shortcuts in the main "
+"menu. "
+
 #: ../../manuel_utilisateur.md:265
 msgid "Quitter"
 msgstr "Exit"
@@ -949,4 +949,7 @@ msgstr ""
 #~ "DesktopBrailleRAP avec une carte d'quartier"
 #~ " résidentielage"
 #~ msgstr ""
+
+#~ msgid "**Plan de ville**"
+#~ msgstr "**City map**"
 
