--- a/src/locales/nl.json
+++ b/src/locales/nl.json
@@ -2,6 +2,7 @@
     
     "app.loading": "Bezig met laden…",
     "app.wait": "Bezig met wachten…",
+    "app.confirquit":"Weet u zeker dat u de app wilt afsluiten ?",
     "file.open": "Openen",
     "file.save": "Opslaan",
     "file.saveas": "Opslaan als",
